Тест исправления